# bert_toriki

./: bert_posinega2.ipynb  pyproject.toml
