[tool.poetry]
name = "bert_1"
version = "0.1.0"
description = ""
authors = ["Empoleon-395 <taka.yu9000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
transformers = "^4.11.3"
torch = "^1.9.1"
scikit-learn = "^1.0"
ipykernel = "^6.4.1"
fugashi = "^1.1.1"
ipadic = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
